external-crates/move/crates/move-compiler/tests/move_2024/ide_mode/colon_colon_incomplete@ide.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
note[I15006]: IDE path autocomplete
   ┌─ tests/move_2024/ide_mode/colon_colon_incomplete.move:1:1
   │  
 1 │ ╭ module a::m {
 2 │ │ 
 3 │ │     public enum SomeEnum {
 4 │ │         SomeVariant,
   · │
24 │ │ 
25 │ │ }
   │ ╰─^ Possible in-scope names
   │  
   = members: 'Option -> std::option::Option', 'SomeEnum -> a::m::SomeEnum', 'foo -> a::m::foo', 'member_complete -> a::m::member_complete', 'mod_complete -> a::m::mod_complete', 'pkg_complete -> a::m::pkg_complete', or 'variant_incomplete -> a::m::variant_incomplete'
   = modules: 'Self -> a::m', 'option -> std::option', or 'vector -> std::vector'
   = addresses: 'A -> 0x41', 'B -> 0x42', 'K -> 0x19', 'M -> 0x40', 'a -> 0x44', 'b -> 0x45', 'k -> 0x19', 'std -> 0x1', or 'sui -> 0x2'
   = type params: 

note[I15006]: IDE path autocomplete
   ┌─ tests/move_2024/ide_mode/colon_colon_incomplete.move:10:9
   │
10 │         A
   │         ^ Possible in-scope names
   │
   = members: 'Option -> std::option::Option', 'SomeEnum -> a::m::SomeEnum', 'foo -> a::m::foo', 'member_complete -> a::m::member_complete', 'mod_complete -> a::m::mod_complete', 'pkg_complete -> a::m::pkg_complete', or 'variant_incomplete -> a::m::variant_incomplete'
   = modules: 'Self -> a::m', 'option -> std::option', or 'vector -> std::vector'
   = addresses: 'A -> 0x41', 'B -> 0x42', 'K -> 0x19', 'M -> 0x40', 'a -> 0x44', 'b -> 0x45', 'k -> 0x19', 'std -> 0x1', or 'sui -> 0x2'
   = type params: 

error[E03006]: unexpected name in this position
   ┌─ tests/move_2024/ide_mode/colon_colon_incomplete.move:10:9
   │
10 │         A
   │         ^ Expected a type, function, or constant in this position, not an address

note[I15006]: IDE path autocomplete
   ┌─ tests/move_2024/ide_mode/colon_colon_incomplete.move:14:9
   │
14 │         a::
   │         ^ Possible in-scope names
   │
   = members: 'Option -> std::option::Option', 'SomeEnum -> a::m::SomeEnum', 'foo -> a::m::foo', 'member_complete -> a::m::member_complete', 'mod_complete -> a::m::mod_complete', 'pkg_complete -> a::m::pkg_complete', or 'variant_incomplete -> a::m::variant_incomplete'
   = modules: 'Self -> a::m', 'option -> std::option', or 'vector -> std::vector'
   = addresses: 'A -> 0x41', 'B -> 0x42', 'K -> 0x19', 'M -> 0x40', 'a -> 0x44', 'b -> 0x45', 'k -> 0x19', 'std -> 0x1', or 'sui -> 0x2'
   = type params: 

error[E01016]: invalid name
   ┌─ tests/move_2024/ide_mode/colon_colon_incomplete.move:14:9
   │
14 │         a::
   │         ^^^ Incomplete name in this position. Expected an identifier after '::'

note[I15006]: IDE path autocomplete
   ┌─ tests/move_2024/ide_mode/colon_colon_incomplete.move:18:9
   │
18 │         a::m::
   │         ^ Possible in-scope names
   │
   = members: 'Option -> std::option::Option', 'SomeEnum -> a::m::SomeEnum', 'foo -> a::m::foo', 'member_complete -> a::m::member_complete', 'mod_complete -> a::m::mod_complete', 'pkg_complete -> a::m::pkg_complete', or 'variant_incomplete -> a::m::variant_incomplete'
   = modules: 'Self -> a::m', 'option -> std::option', or 'vector -> std::vector'
   = addresses: 'A -> 0x41', 'B -> 0x42', 'K -> 0x19', 'M -> 0x40', 'a -> 0x44', 'b -> 0x45', 'k -> 0x19', 'std -> 0x1', or 'sui -> 0x2'
   = type params: 

error[E01016]: invalid name
   ┌─ tests/move_2024/ide_mode/colon_colon_incomplete.move:18:9
   │
18 │         a::m::
   │         ^^^^^^ Incomplete name in this position. Expected an identifier after '::'

note[I15006]: IDE path autocomplete
   ┌─ tests/move_2024/ide_mode/colon_colon_incomplete.move:22:9
   │
22 │         a::m::SomeEnum::
   │         ^ Possible in-scope names
   │
   = members: 'Option -> std::option::Option', 'SomeEnum -> a::m::SomeEnum', 'foo -> a::m::foo', 'member_complete -> a::m::member_complete', 'mod_complete -> a::m::mod_complete', 'pkg_complete -> a::m::pkg_complete', or 'variant_incomplete -> a::m::variant_incomplete'
   = modules: 'Self -> a::m', 'option -> std::option', or 'vector -> std::vector'
   = addresses: 'A -> 0x41', 'B -> 0x42', 'K -> 0x19', 'M -> 0x40', 'a -> 0x44', 'b -> 0x45', 'k -> 0x19', 'std -> 0x1', or 'sui -> 0x2'
   = type params: 

error[E01016]: invalid name
   ┌─ tests/move_2024/ide_mode/colon_colon_incomplete.move:22:9
   │
22 │         a::m::SomeEnum::
   │         ^^^^^^^^^^^^^^^^ Incomplete name in this position. Expected an identifier after '::'

note[I15006]: IDE path autocomplete
   ┌─ tests/move_2024/ide_mode/colon_colon_incomplete.move:27:1
   │  
27 │ ╭ module a::m2 {
28 │ │     public fun foo() {}
29 │ │ }
   │ ╰─^ Possible in-scope names
   │  
   = members: 'Option -> std::option::Option' or 'foo -> a::m2::foo'
   = modules: 'Self -> a::m2', 'option -> std::option', or 'vector -> std::vector'
   = addresses: 'A -> 0x41', 'B -> 0x42', 'K -> 0x19', 'M -> 0x40', 'a -> 0x44', 'b -> 0x45', 'k -> 0x19', 'std -> 0x1', or 'sui -> 0x2'
   = type params:
